--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -15,3 +15,243 @@ header {
    display: none;
  }
 }
+
+.top-bar {
+  background: white !important;
+  color: #111;
+  padding-bottom: 0;
+  padding-top: 0;
+
+  @include breakpoint(medium) {
+    padding: 0;
+  }
+
+  ul {
+    background: none;
+    padding-right: rem-calc(15);
+  }
+
+  .menu .menu-text {
+    padding: 0;
+
+    a {
+      color: #fff;
+      display: inline-block;
+      font-family: "Lato" !important;
+      font-size: rem-calc(24);
+      font-weight: lighter;
+      line-height: $line-height * 2;
+      padding: 0;
+
+      @include breakpoint(medium) {
+        line-height: rem-calc(80);
+        margin-top: 0;
+      }
+
+      img {
+
+        @include breakpoint(medium) {
+          margin-right: $line-height / 2;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+
+  .menu > li {
+    display: block;
+    width: 100%;
+
+    @include breakpoint(medium) {
+      width: auto;
+    }
+
+    a {
+      color: $brand;
+      padding-left: 0;
+
+      @include breakpoint(medium) {
+        font-size: $small-font-size;
+        padding: rem-calc(11) rem-calc(16);
+      }
+    }
+
+    .button {
+      background: none;
+      text-align: left;
+
+      @include breakpoint(medium) {
+        background: $brand;
+        color: white;
+        text-align: center;
+      }
+    }
+  }
+
+  .has-submenu {
+
+    &.is-active a {
+      color: #fff;
+      font-weight: bold;
+    }
+  }
+
+  .menu {
+
+    &.is-dropdown-submenu {
+      background: #fff;
+      margin: 0;
+      margin-top: rem-calc(-12);
+      padding: 0;
+      z-index: 9;
+    }
+
+    .is-submenu-item {
+      display: block;
+      height: auto;
+      margin-bottom: 0;
+
+      a {
+        color: $text;
+      }
+    }
+  }
+
+  .top-bar-title {
+    line-height: $line-height;
+
+    a img {
+      height: rem-calc(48);
+      margin: 0;
+      width: auto;
+
+      @include breakpoint(medium up) {
+        height: auto;
+      }
+    }
+  }
+}
+
+.subnavigation {
+
+  @include breakpoint(medium) {
+    background: #b4dafd;
+    padding-bottom: 0;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+
+    li {
+      @include breakpoint(medium) {
+        display: inline-block;
+        margin-right: rem-calc(20);
+      }
+    }
+  }
+
+  a {
+    color: #004a83;
+    display: inline-block;
+    line-height: $line-height * 2;
+    position: relative;
+    text-align: left;
+    width: 100%;
+
+    @include breakpoint(medium) {
+      color: $text;
+      display: block;
+      font-weight: bold;
+      width: auto;
+
+      &:hover {
+        color: $link;
+      }
+    }
+
+    &.is-active {
+      color: #fff;
+
+      @include breakpoint(medium) {
+        border-bottom: 2px solid $brand;
+        color: $brand;
+      }
+    }
+  }
+
+  .input-group {
+    padding-top: $line-height / 4;
+
+    @include breakpoint(medium) {
+      margin-bottom: 0;
+    }
+  }
+
+  .input-group-field {
+    margin-bottom: 0 !important;
+  }
+
+  .input-group-button {
+    line-height: $line-height * 1.5;
+    padding-bottom: 0;
+
+    button {
+      background: $border;
+      border: 1px solid #ccc;
+      border-left: 0;
+      color: $text;
+      height: $line-height * 1.5;
+      line-height: $line-height * 1.5;
+      padding-top: 0;
+    }
+  }
+
+  input {
+    height: $line-height * 1.5 !important;
+    margin-bottom: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+}
+
+.menu-icon {
+
+  &.dark {
+  
+    &:hover::after,
+    &::after {
+      background: #111;
+      box-shadow: 0 7px 0 #333, 0 14px 0 #999;
+    }
+  }
+}
+
+.topless {
+    @include breakpoint(small) {
+      top: auto !important;
+      }
+   
+    @include breakpoint(medium) {
+    top: 0px !important;
+    }
+  }
+
+  .poll h4 {
+    font-size: 1.2rem;
+  }
+
+  .small-12.medium-6.column {
+
+    @include breakpoint(medium) {
+    }
+
+    @include breakpoint(large) {
+    }
+
+    @include breakpoint(xlarge) {
+    } 
+
+    @include breakpoint(xxlarge) {
+    }
+}
