--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -135,7 +135,7 @@ header {
 .subnavigation {
 
   @include breakpoint(medium) {
-    background: #b4dafd;
+    background: #b4fffd;
     padding-bottom: 0;
   }
 
