--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -255,3 +255,100 @@ header {
     @include breakpoint(xxlarge) {
     }
 }
+
+// 2. Versuch
+.home-page,
+.custom-page {
+
+  a {
+
+    p {
+
+      &.description {
+        color: $text;
+        word-wrap: break-word;
+      }
+    }
+  }
+
+  a:hover {
+
+    h3 {
+      color: #fff;
+    }
+  }
+
+  .background-header {
+    clip-path: ellipse(60% 80% at 50% 0%);
+    height: $line-height * 2;
+    background: $highlight;
+    margin-top: rem-calc(-48);
+  }
+
+  .cards-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .card {
+    border: 0;
+    flex-grow: 0;
+    overflow: visible;
+
+    a {
+      height: 100%;
+
+      img {
+        transition-duration: 0.3s;
+        transition-property: transform;
+      }
+    }
+
+    a:hover {
+      text-decoration: none;
+
+      &:not(.see-all) {
+        box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+      }
+
+      img {
+        transform: scale(1.1);
+      }
+    }
+
+    p {
+      padding: 0 $line-height / 4;
+    }
+  }
+
+  h3 {
+
+    &.title {
+      display: inline-block;
+      border-top: 4px solid $brand;
+      margin-bottom: 0;
+      min-width: rem-calc(240);
+      padding: $line-height / 2 0;
+    }
+  }
+
+  .figure-card {
+
+    figcaption {
+      z-index: 3;
+    }
+
+    .gradient {
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.01) 1%, grey 100%);
+      height: 100%;
+      position: absolute;
+      width: 100%;
+      z-index: 2;
+    }
+  }
+
+  figure img {
+    height: 100%;
+    width: 100%;
+  }
+}
